# RBC

./: .gitignore  README.md  career_assets.md  pyproject.toml  requirements.txt
scripts/: run_research.py
src/intraday_execution_research_lab/: __init__.py  backtest.py  bayesian.py  black_scholes.py  data.py  execution.py  features.py  visualization.py
tests/: test_black_scholes.py  test_execution.py
