[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-execution-research-lab"
version = "0.1.0"
description = "Intraday execution research lab for SPY/QQQ with strategy backtests and volatility-regime adaptation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yfinance>=0.2.50",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "scipy>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
